style.css
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}

nav {
  background-color: white;
}

a.brand-logo, a.nav-link, .button-collapse i {
  color: rgb(129,	160,	111) !important;
}

.page-footer, .btn {
  background-color: rgb(129,	160,	111);
}

.parallax-container {
  height: 60vh;
}

.main-img {
  max-width: 100%;
}

.header, h5.row.center {
  color: white;
}

.main-search {
  background-color: white !important;
  background-color: rgba(255, 255, 255, .5) !important;
  width: 75% !important;
  border-bottom: none !important;
}

i.material-icons {
  font-size: inherit;
  color: rgb(129,	160,	111);
}

p {
  line-height: 2rem;
}

.default-content {
  /* Section that will disappear when search initiates */
}

.search-content {
  /* Section that will appear when search initiates */
}

/*ul li {
  list-style-type: disc;
}*/

